Fix select overflow

--- a/react-app/src/components/EditEventForm/EditEventForm.module.css
+++ b/react-app/src/components/EditEventForm/EditEventForm.module.css
@@ -43,6 +43,8 @@
 .form select {
     padding: 0.5rem 0.3rem;
     cursor: pointer;
+    width: 100%;
+    max-width: 95%;
 }
 
 .form select:focus {
